# tripleo-specs

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  tox.ini
doc/source/: conf.py  index.rst  installation.rst  usage.rst
specs/: policy-template.rst  template.rst
specs/juno/: backwards-compat-policy.rst  haproxy_configuration.rst  network_configuration.rst  oac-header.rst  promote-heat-env.rst  ssl_pki.rst  template.rst  tripleo-juno-ci-improvements.rst  tripleo-juno-configurable-mnt-state.rst  tripleo-juno-deploy-cloud-hypervisor-type.rst  tripleo-juno-dracut-ramdisks.rst  tripleo-juno-occ-localdatasource.rst  tripleo-juno-tuskar-rest-api.rst  tripleo-juno-tuskar-template-storage.rst  tripleo-on-openstack.rst  unit-testing.rst  virtual-public-ips.rst
specs/kilo/: cinder_ha.rst  remove-mergepy.rst  tripleo-enable-dvr.rst  tripleo-review-standards.rst
specs/liberty/: release-branch.rst
specs/mitaka/: external-load-balancer.rst  puppet-modules-deployment-via-swift.rst  refactor-puppet-manifests.rst  tripleo-mistral-deployment-library.rst  tripleo-overcloud-deployment-library.rst  tripleo-quickstart.rst  tripleo-ui.rst
specs/newton/: metal-to-tenant.rst  os-net-config-teaming.rst  pacemaker-next-generation-architecture.rst  tripleo-lldp-validation.rst  tripleo-opstools-availability-monitoring.rst  tripleo-opstools-centralized-logging.rst  (+5 more)
tests/: test_titles.py
tools/: abandon_old_reviews.sh  unassign_bug.py
tripleo-specs/: __init__.py
(+103 files in other folders)
